Proyecto2/Kubernetes/rabbit-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-consumer
  template:
    metadata:
      labels:
        app: rabbit-consumer
    spec:
      containers:
        - name: rabbit-consumer
          image: 18fernando/rabbit-consumer:1
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
