Proyecto2/Kubernetes/grpc-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template: # ¡Este campo debe estar al mismo nivel que 'selector' y 'replicas'!
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: 18fernando/grpc-client:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: proyecto2
spec:
  selector:
    app: grpc-client
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
