Proyecto2/Kubernetes/grpc-server-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-kafka
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server-kafka
  template:
    metadata:
      labels:
        app: grpc-server-kafka
    spec:
      containers:
        - name: grpc-server-kafka
          image: 18fernando/grpc-server-kafka:5
          ports:
            - containerPort: 50051
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50051"]
            initialDelaySeconds: 30
            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-kafka
  namespace: proyecto2
spec:
  selector:
    app: grpc-server-kafka
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
