Proyecto2/Kubernetes/rust-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
        - name: rust-api
          image: 18fernando/deploymentrust:2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m" # 0.1 CPU cores
              memory: "128Mi"
            limits:
              cpu: "500m" # 0.5 CPU cores
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api
  namespace: proyecto2
spec:
  selector:
    app: rust-api
  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
